--- a/DS_Lab1/DS_Lab1.vcxproj.filters
+++ b/DS_Lab1/DS_Lab1.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="Student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Student.cpp">
+    <ClCompile Include="DSLab1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
